--- a/index.html
+++ b/index.html
@@ -1,12 +1,399 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phạm Xuân Phong</title>
-</head>
-<body>
-    <h1>Xin chào bạn đến với trang web của Phạm Xuân Phong</h1>
-    <h2>Vinh vinh lon heo</h2>
-</body>
+<html lang="vi">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Happy Birthday VIP</title>
+        <style>
+            /* --- 1. CẤU HÌNH CƠ BẢN --- */
+            @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
+            body {
+                margin: 0;
+                padding: 0;
+                background-color: #000;
+                overflow: hidden;
+                font-family: "Press Start 2P", cursive;
+                color: #ffb6c1;
+            }
+
+            /* --- 2. MÀN HÌNH LOADING --- */
+            #loading {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: #000;
+                z-index: 100;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                transition: opacity 1s;
+            }
+            .loader-text {
+                animation: blink 1s infinite;
+            }
+
+            /* --- 3. MATRIX BACKGROUND --- */
+            canvas {
+                display: block;
+                position: fixed;
+                top: 0;
+                left: 0;
+                z-index: 1;
+            }
+
+            /* --- 4. TEXT OVERLAY (HIỆN CHỮ 3, 2, 1, HAPPY...) --- */
+            #text-overlay {
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                z-index: 10;
+                width: 100%;
+                text-align: center;
+                pointer-events: none; /* Để không che mất các thao tác khác */
+            }
+
+            /* Tạo hiệu ứng chữ LED chấm bi như bạn thích */
+            .matrix-text {
+                font-size: 8rem;
+                font-weight: 900;
+                font-family: sans-serif; /* Dùng font dày để hiện rõ chấm */
+                color: transparent;
+                background-image: radial-gradient(#ff69b4 30%, transparent 32%);
+                background-size: 8px 8px;
+                -webkit-background-clip: text;
+                background-clip: text;
+                opacity: 0;
+                transform: scale(0.5);
+                transition: all 0.5s ease-out;
+                text-shadow: 0 0 20px rgba(255, 20, 147, 0.5); /* Bóng mờ hồng */
+            }
+
+            .matrix-text.active {
+                opacity: 1;
+                transform: scale(1);
+            }
+
+            /* --- 5. PHẦN QUÀ TẶNG & ẢNH TRÁI TIM --- */
+            #gallery-container {
+                display: none;
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 20;
+                background: radial-gradient(circle, #1a0b1a 0%, #000 100%);
+                perspective: 1000px; /* Tạo chiều sâu 3D */
+                overflow: hidden;
+            }
+
+            /* Nút hộp quà */
+            #gift-box {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 5rem;
+                cursor: pointer;
+                animation: bounce 2s infinite;
+                z-index: 30;
+            }
+
+            /* Khung chứa xoay vòng trái tim */
+            #heart-group {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 0;
+                height: 0;
+                transform-style: preserve-3d;
+                animation: rotateHeart 20s linear infinite;
+            }
+
+            .photo-card {
+                position: absolute;
+                width: 60px; /* Kích thước ảnh nhỏ */
+                height: 80px;
+                background-size: cover;
+                background-position: center;
+                border: 2px solid #fff;
+                border-radius: 5px;
+                box-shadow: 0 0 10px #ff69b4;
+                opacity: 0; /* Ẩn ban đầu */
+                transition: all 1.5s ease; /* Hiệu ứng bay ra mượt mà */
+                transform-origin: center;
+            }
+
+            /* --- ANIMATIONS --- */
+            @keyframes blink {
+                50% {
+                    opacity: 0.5;
+                }
+            }
+            @keyframes bounce {
+                0%,
+                100% {
+                    transform: translate(-50%, -50%) scale(1);
+                }
+                50% {
+                    transform: translate(-50%, -60%) scale(1.1);
+                }
+            }
+            @keyframes rotateHeart {
+                0% {
+                    transform: rotateY(0deg) rotateX(10deg);
+                }
+                100% {
+                    transform: rotateY(360deg) rotateX(10deg);
+                }
+            }
+
+            /* Nhạc nền (Ẩn) */
+            #bg-music {
+                display: none;
+            }
+
+            .final-msg {
+                position: absolute;
+                bottom: 20px;
+                width: 100%;
+                text-align: center;
+                color: white;
+                font-size: 1.2rem;
+                text-shadow: 0 0 10px pink;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="loading">
+            <div class="loader-text">ĐANG TẢI DỮ LIỆU CẢM XÚC...</div>
+            <div style="margin-top: 10px; font-size: 10px">
+                (Chạm vào màn hình để bắt đầu nhạc)
+            </div>
+        </div>
+
+        <canvas id="matrixCanvas"></canvas>
+
+        <div id="text-overlay">
+            <div id="dynamic-text" class="matrix-text"></div>
+        </div>
+
+        <div id="gallery-container">
+            <div id="gift-box" onclick="openGift()">🎁</div>
+            <div id="heart-group"></div>
+            <div class="final-msg" id="final-msg" style="display: none">
+                CHÚC MỪNG SINH NHẬT NGƯỜI ĐẶC BIỆT! ❤️
+            </div>
+        </div>
+
+        <audio id="bg-music" loop>
+            <source
+                src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
+                type="audio/mpeg"
+            />
+        </audio>
+
+        <script>
+            // --- CẤU HÌNH ---
+            // Thay danh sách ảnh của bạn vào đây (Càng nhiều ảnh càng đẹp, khoảng 30-50 cái)
+            const imageUrls = [
+                "https://images.unsplash.com/photo-1524504388940-b1c1722653e1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400",
+                "https://images.unsplash.com/photo-1494790108377-be9c29b29330?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400",
+                "https://images.unsplash.com/photo-1517841905240-472988babdf9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400",
+                "https://images.unsplash.com/photo-1534528741775-53994a69daeb?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400",
+                // ... Bạn có thể copy paste thêm link ảnh vào đây
+                "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400",
+                "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400",
+                "https://images.unsplash.com/photo-1513151233558-d860c5398176?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400",
+            ];
+
+            // Tự động nhân bản ảnh cho đủ số lượng làm trái tim (nếu ít ảnh quá)
+            while (imageUrls.length < 50) {
+                imageUrls.push(...imageUrls);
+            }
+
+            // --- PHẦN 1: MATRIX RAIN (Hồng) ---
+            const canvas = document.getElementById("matrixCanvas");
+            const ctx = canvas.getContext("2d");
+            let width = (canvas.width = window.innerWidth);
+            let height = (canvas.height = window.innerHeight);
+
+            const cols = Math.floor(width / 20);
+            const yPos = Array(cols).fill(0);
+
+            function drawMatrix() {
+                ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+                ctx.fillRect(0, 0, width, height);
+
+                ctx.fillStyle = "#ff69b4"; // Màu chữ Matrix (Hồng)
+                ctx.font = "15px monospace";
+
+                yPos.forEach((y, index) => {
+                    const text = String.fromCharCode(Math.random() * 128);
+                    const x = index * 20;
+                    ctx.fillText(text, x, y);
+
+                    if (y > height && Math.random() > 0.975) {
+                        yPos[index] = 0;
+                    } else {
+                        yPos[index] = y + 20;
+                    }
+                });
+            }
+
+            let matrixInterval;
+
+            // --- PHẦN 2: LOGIC CHẠY KỊCH BẢN ---
+
+            window.onload = () => {
+                // Click để bắt đầu (tránh lỗi trình duyệt chặn nhạc)
+                document.body.addEventListener("click", startShow);
+            };
+
+            function startShow() {
+                document.body.removeEventListener("click", startShow);
+
+                // 1. Ẩn Loading, Bật nhạc
+                document.getElementById("loading").style.opacity = 0;
+                setTimeout(
+                    () =>
+                        (document.getElementById("loading").style.display =
+                            "none"),
+                    1000
+                );
+
+                const music = document.getElementById("bg-music");
+                music
+                    .play()
+                    .catch((e) => console.log("Cần tương tác để phát nhạc"));
+
+                // 2. Chạy Matrix
+                matrixInterval = setInterval(drawMatrix, 50);
+
+                // 3. Bắt đầu đếm ngược sau 1s
+                setTimeout(runSequence, 1000);
+            }
+
+            const textEl = document.getElementById("dynamic-text");
+
+            async function runSequence() {
+                // Hàm hiển thị chữ nhấp nháy
+                const showText = (text, duration) => {
+                    return new Promise((resolve) => {
+                        textEl.innerText = text;
+                        textEl.classList.add("active"); // Hiện
+
+                        setTimeout(() => {
+                            textEl.classList.remove("active"); // Ẩn
+                            setTimeout(resolve, 600); // Chờ ẩn xong mới resolve
+                        }, duration);
+                    });
+                };
+
+                // Kịch bản chạy chữ (Bạn có thể sửa nội dung ở đây)
+                await showText("3", 1000);
+                await showText("2", 1000);
+                await showText("1", 1000);
+                await showText("HAPPY", 1200);
+                await showText("BIRTHDAY", 1200);
+                await showText("TO", 800);
+                await showText("YOU", 1200);
+                await showText("❤️", 1500);
+
+                // Kết thúc Matrix, chuyển sang quà
+                finishMatrix();
+            }
+
+            function finishMatrix() {
+                clearInterval(matrixInterval);
+                // Xóa dần canvas
+                let op = 1;
+                const fadeOut = setInterval(() => {
+                    if (op <= 0) {
+                        clearInterval(fadeOut);
+                        canvas.style.display = "none";
+                        document.getElementById(
+                            "gallery-container"
+                        ).style.display = "block"; // Hiện màn quà
+                    }
+                    canvas.style.opacity = op;
+                    op -= 0.05;
+                }, 50);
+            }
+
+            // --- PHẦN 3: XẾP ẢNH HÌNH TRÁI TIM 3D ---
+
+            function openGift() {
+                const giftBox = document.getElementById("gift-box");
+                giftBox.style.display = "none"; // Ẩn hộp quà
+
+                document.getElementById("final-msg").style.display = "block";
+
+                const heartGroup = document.getElementById("heart-group");
+                const totalPhotos = 40; // Số lượng ảnh muốn hiện
+                const radius = 350; // Độ lớn của trái tim
+
+                // Công thức toán học tạo hình trái tim 3D
+                // Chúng ta sẽ rải ảnh theo các tọa độ (x, y, z)
+
+                for (let i = 0; i < totalPhotos; i++) {
+                    const imgDiv = document.createElement("div");
+                    imgDiv.className = "photo-card";
+                    // Lấy ảnh ngẫu nhiên từ danh sách
+                    const imgUrl = imageUrls[i % imageUrls.length];
+                    imgDiv.style.backgroundImage = `url(${imgUrl})`;
+
+                    heartGroup.appendChild(imgDiv);
+
+                    // Tính toán vị trí trái tim
+                    // Dùng công thức tham số cho đường cong trái tim
+                    // t đi từ 0 đến 2PI
+                    const t = (Math.PI * 2 * i) / totalPhotos;
+
+                    // Công thức trái tim 2D cơ bản:
+                    // x = 16sin^3(t)
+                    // y = 13cos(t) - 5cos(2t) - 2cos(3t) - cos(4t)
+
+                    // Scale to ra
+                    let x = 16 * Math.pow(Math.sin(t), 3);
+                    let y = -(
+                        13 * Math.cos(t) -
+                        5 * Math.cos(2 * t) -
+                        2 * Math.cos(3 * t) -
+                        Math.cos(4 * t)
+                    );
+
+                    // Random nhẹ Z để tạo độ dày 3D
+                    let z = (Math.random() - 0.5) * 100;
+
+                    // Scale kích thước
+                    x *= 15;
+                    y *= 15;
+
+                    // Gán vị trí ban đầu (ở tâm) để tạo hiệu ứng bay ra
+                    imgDiv.style.transform = `translate(-50%, -50%) translate3d(0px, 0px, 0px)`;
+
+                    // Sau 1 chút thì bay ra vị trí trái tim
+                    setTimeout(() => {
+                        imgDiv.style.opacity = 1;
+                        // Xoay ảnh hướng về tâm
+                        imgDiv.style.transform = `translate(-50%, -50%) translate3d(${x}px, ${y}px, ${z}px) rotateY(${
+                            i * 10
+                        }deg)`;
+                    }, 50 + i * 30); // Bay ra lần lượt
+                }
+            }
+
+            // Resize màn hình
+            window.addEventListener("resize", () => {
+                width = canvas.width = window.innerWidth;
+                height = canvas.height = window.innerHeight;
+            });
+        </script>
+    </body>
 </html>
