--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Món Quà Đặc Biệt Cho Bạn 🎁</title>
+    <title>Happy Birthday To Em Iu 🎁</title>
     <meta name="language" content="zh-CN">
     <meta name="description" content="Một món quà đầy yêu thương đang chờ bạn khám phá! Nhấn để xem lời chúc đặc biệt!">
 
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" href="./image/logo.png">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Món Quà Đặc Biệt Cho Bạn 🎁">
+    <meta property="og:title" content="Happy Birthday To Em Iu 🎁">
     <meta property="og:description"
         content="Một món quà đầy yêu thương đang chờ bạn khám phá! Nhấn để xem lời chúc đặc biệt!">
     <meta property="og:image" content="https://happybirthdaydeargift.vercel.app/image/logo.png">
@@ -23,7 +23,7 @@
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Món Quà Đặc Biệt Cho Bạn 🎁">
+    <meta name="twitter:title" content="Happy Birthday To Em Iu 🎁">
     <meta name="twitter:description"
         content="Một món quà đầy yêu thương đang chờ bạn khám phá! Nhấn để xem lời chúc đặc biệt!">
     <meta name="twitter:image" content="https://happybirthdaydeargift.vercel.app/image/birthday-gift.jpg">
