--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Happy Birthday To Em Iu 🎁</title>
     <meta name="language" content="zh-CN">
-    <meta name="description" content="Một món quà đầy yêu thương đang chờ bạn khám phá! Nhấn để xem lời chúc đặc biệt!">
+    <meta name="description" content="Happy Birthday To Em Iu 🎁">
 
     <!-- Favicon and Icons -->
-    <link rel="icon" href="./image/logo.png" type="image/png">
-    <link rel="apple-touch-icon" href="./image/logo.png">
+    <link rel="icon" href="./image/vv.png" type="image/png">
+    <link rel="apple-touch-icon" href="./image/vv.png">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Happy Birthday To Em Iu 🎁">
     <meta property="og:description"
-        content="Một món quà đầy yêu thương đang chờ bạn khám phá! Nhấn để xem lời chúc đặc biệt!">
+        content="Happy Birthday To Em Iu 🎁">
     <meta property="og:image" content="https://happybirthdaydeargift.vercel.app/image/logo.png">
     <!-- <meta property="og:url" content="https://happybirthdaydeargift.vercel.app/?websiteId=686d4ef53c910ba1bee5ec5c"> -->
     <meta property="og:type" content="website">
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Happy Birthday To Em Iu 🎁">
     <meta name="twitter:description"
-        content="Một món quà đầy yêu thương đang chờ bạn khám phá! Nhấn để xem lời chúc đặc biệt!">
+        content="Happy Birthday To Em Iu 🎁">
     <meta name="twitter:image" content="https://happybirthdaydeargift.vercel.app/image/birthday-gift.jpg">
 
     <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/sun0225SUN/photos/img/20210715233345.png">
