--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 style="color: rgb(132, 132, 132); font-weight: normal; font-size: 12px; display: block; margin-bottom: 5px;">
                                 lưu ý: hãy ngăn cách bằng dấu | để tách từ, không nên để một dòng quá dài
                             </span>
-                            <input type="text" id="sequenceText" value="CHÚC|MỪNG|SINH|NHẬT|EM|BÉ|VINH|IU|CỦA|ANH|❤"
+                            <input type="text" id="sequenceText" value="CHÚC|MỪNG|SINH|NHẬT|BÉ|VINH|IU|CỦA|ANH|❤"
                                 placeholder="Ví dụ: CHÚC|MỪNG|SINH|NHẬT|..." data-i18n-placeholder="sequenceText">
                         </div>
                         <div class="form-group" id="sequenceColorSection" style="display: none;">
